[package]
name = "miskkey-user-downtime"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.34", default-features = false, features = ["now"] }
clap = { version = "4.5.0", features = ["derive", "env"] }
futures = "0.3.30"
misskey = { version = "0.3.0-rc.1", default-features = false, features = ["12-75-0", "http-client", "tokio-runtime", "aid"] }
tokio = { version = "1.35.1", default-features = false, features = ["rt-multi-thread", "macros"] }
url = "2.5.0"
